--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require": {
         "php": ">=5.4.0",
         "topthink/framework": "5.0.*",
-        "phpoffice/phpexcel": "^1.8"
+        "phpoffice/phpexcel": "^1.8",
+        "phpmailer/phpmailer": "^6.1",
+        "nette/mail": "^2.4"
     },
     "autoload": {
         "psr-4": {
